--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "start": "npm run build --prefix client/ && npm start --prefix server/",
+    "prod":"cd server && npm install && cd .. && cd client && npm install && cd .. && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JC Bombardelli",
